# event-overlays

./: .gitignore  Dockerfile  compose.yml  main.py  models.py  pyproject.toml  seed_from_programapi.py  snapshot.py  snapshot.sh
app/: config.py  constants.py  main.py  models.py  state.py  template_renderer.py
app/models/: __init__.py  base.py  event.py  rig.py  state.py  timer.py
app/routes/: __init__.py  control.py  demo.py  scenes.py  timers.py  utils.py  websocket.py
app/utils/: file_sha.py
static/: control.scss  demo.js  global.scss  timer.scss  vue.esm-browser.js  ws.js
static/branding/: clug.scss  europython.scss  pydata-krk.scss  pykonik.scss  python-pizza.scss  sesja-linuksowa.scss
static/fonts/: _fira_sans.scss  _montserrat.scss  _open-sans.scss  _roboto.scss
templates/: checklist.html  checklists_list.html  control.html  demo.html  scene.html  schedule-table.html  signage.html  speaker-timer.html
templates/partials/: competition-integration.html  event-logo.html  message.html  next.html  presentation-title.html  questions-integration.html  schedule.html  sponsor-groups.html  video.html
templates/partials/control/: control.html  schedule-table.html
templates/partials/elements/: timer.html
utils/: file_sha.py
