[tool.poetry]
name = "obs-overlays"
version = "0.1.0"
description = ""
authors = ["GwynBleidD <gbd.lin@gmail.com>"]
readme = "README.md"
packages = [{include = "obs_overlays"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.3"
fastapi-utilities = "^0.2.0"
uvicorn = { version = "^0.32.0", extras = ["standard"] }
jinja2 = "^3.1.4"
pydantic = "^2.9.2"
html2image = "^2.0.4.3"
pydantic-settings = "^2.5.2"

[tool.poetry.group.media_upload.dependencies]
pyatem = "^0.9.0"
pyusb = "^1.2.1"
pillow = "^10.1.0"
tqdm = "^4.66.1"

[tool.poetry.group.programapi.dependencies]
httpx = "^0.27.0"
tomlkit = "^0.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
