[project]
name = "event-overlays"
version = "0.1.0"
description = ""
authors = [
    {name="GwynBleidD", email="gbd.lin@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi~=0.115.8",
    "fastapi-utilities~=0.3.0",
    "uvicorn[standard]~=0.32.0",
    "jinja2>=3.1.4,==3.*.*",
    "pydantic>=2.9.2,==2.*.*",
    "html2image>=2.0.5,==2.*.*",
    "pydantic-settings>=2.5.2,==2.*.*",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.media_upload.dependencies]
pyatem = "^0.9.0"
pyusb = "^1.2.1"
pillow = "^10.1.0"
tqdm = "^4.66.1"

[tool.poetry.group.programapi.dependencies]
httpx = "^0.27.0"
tomlkit = "^0.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
